--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,2 +1,5 @@
-﻿@using IDP.Pages
+﻿@*@using Microsoft.AspNetCore.Identity*@
+@using IDP
+@using IDP.Data
+@using IDP.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
